[tool.poetry]
name = "lef-web-tools"
version = "0.1.0"
description = "A set of tools used to do nice things in order to produce the lef.fyi static website"
authors = ["Lef Filippakis <Lef-F@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
